Changed UniCrypt to Version 2.1